--- a/assets/admin.css
+++ b/assets/admin.css
@@ -287,3 +287,21 @@ body {
     font-size: 24px;
     cursor: pointer;
 }
+
+.logout-button-wrapper {
+    position: absolute;
+    bottom: 1rem;
+    width: 80%;
+    padding: 0 1rem;
+}
+
+.chart-container {
+  width: 100%;
+  max-width: 100%;
+  height: 60vh;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;   
+  background-color: #f5f5f5;
+  overflow-x: auto;
+}
