--- a/assets/styles.css
+++ b/assets/styles.css
@@ -124,6 +124,7 @@ li {
     background-color: #0e2238;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 #sidebar.expand {
