--- a/assets/styles.css
+++ b/assets/styles.css
@@ -308,3 +308,56 @@ a.sidebar-link:hover {
   color: #055160;
   border: 1px solid #b6effb;
 }
+
+.header {
+  width: 100%;
+}
+
+.header {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.blue__bar {
+  background-color: #0D67A1;
+  width: 100%;
+  padding: 20px;
+  padding-bottom: 15px;
+  color: white;
+}
+
+.yellow__bar {
+  background-color: #FFF200;
+  width: 100%;
+  height: 2vh;
+}
+
+.content-area {
+  display: flex;
+  margin-top: 20px;
+  padding: 20px;
+  flex-wrap: wrap;
+}
+
+.student-info-area {
+  background-color: #0D67A1;
+  color: #0D67A1;
+  padding: 24px;
+  border-radius: 18px;
+  flex: 1;
+}
+
+.studen-info-area div {
+  background-color: #D9F0FF !important;
+}
+
+.bg-lightblue {
+  background-color: #D9F0FF !important;
+}
+
+@media (max-width: 768px) {
+  .content-area {
+      flex-direction: column;
+  }
+}
