--- a/assets/styles.css
+++ b/assets/styles.css
@@ -362,17 +362,6 @@ a.sidebar-link:hover {
   }
 }
 
-.fade-in {
-  opacity: 0;
-  transform: translateY(20px);
-  position: absolute;
-  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-  pointer-events: none;
-}
-
-.fade-in.show {
-  opacity: 1;
-  transform: translateY(0);
-  position: relative;
-  pointer-events: auto;
+.container-fluid {
+  transition: all 0.5s ease;
 }
