--- a/assets/admin.css
+++ b/assets/admin.css
@@ -296,26 +296,36 @@ body {
 }
 
 .chart-container {
-  width: 100%;
-  max-width: 100%;
-  height: 60vh;
-  overflow: hidden;
-  padding: 0;
-  margin: 0;   
-  background-color: #f5f5f5;
-  overflow-x: auto;
+    width: 100%;
+    max-width: 100%;
+    height: 60vh;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;   
+    background-color: #f5f5f5;
+    overflow-x: auto;
 }
 
 .modal-content {
-  border-radius: 1rem;
-  box-shadow: 0 0.75rem 1.5rem rgba(0, 0, 0, 0.15);
+    border-radius: 1rem;
+    box-shadow: 0 0.75rem 1.5rem rgba(0, 0, 0, 0.15);
 }
 
 .modal-header {
-  background-color: #f8f9fa;
-  font-weight: bold;
+    background-color: #f8f9fa;
+    font-weight: bold;
 }
 
 .btn-close {
-  outline: none;
+    outline: none;
+}
+
+.sidebar-content a.active {
+    background-color: #0D67A1;
+    color: white !important;
+    font-weight: bold;
+}
+
+.sidebar-content a.active i {
+    color: white !important;
 }
